--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,57 @@
 body{
     font-family: 'Roboto Slab', serif;
-    background-color:  #ECEFF1;
+    background-color:#F8F9F9;
 };
 
 
 header{
-    background-color: #D1D3D5;
     text-align: left;
+    margin-top: 0%;
+}
+
+
+img{
+    width: 4.5%;
+}
+
+.titulo{
+    padding-bottom: 0%;
+    padding-left: 2%;
+    padding-top: 0%;
+}
+
+
+header h1{
+    margin-block-start: 0%;
+    margin-block-end: 0%;
+    margin-left: 5%;
+    display: inline-block;
+}
+
+header h3{
+    padding-bottom: 3%;
+}
+
+.instrucciones{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10%;
+    border: 1px solid #CCC;
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px
+}
+
+main{
+    background-color:#F8F9F9;
+}
+
+.cesar{
+    width: 50%;
+    height: 450px;
+    display: inline-block;
+
 }
 
 
@@ -16,12 +61,61 @@ form {
      padding: 1em;
      border: 1px solid #CCC;
      border-radius: 1em;
-     background-color: white;
+     background-color: #85929E;
 }
 
-form div+div{
-    margin-top: 0.5cm;
+label{
+    display: block;
 }
+
+textarea, input{
+    margin-bottom: 3%;
+    margin-top: 3%;
+    width: 100%;
+    padding: 2%;
+    box-sizing: border-box;
+}
+
+
+.button{
+    text-align: center;
+    display: inline-block;
+    margin-left: 20%;
+}
+
+button img {
+    width: 50px;
+    height: 50px;
+}
+
+button[type="submit"]{
+    background-color:#C62828;
+    border: none;
+    width: 100%;
+    height: 30px;
+}
+
+button[type="submit"]:hover{
+    background-color: #B43E3E;
+}
+
+
+.acerca{
+    background-color:#212F3C;
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+
+}
+
+div[class~=about] {
+    color: white;
+}
+
+
+ 
+
+
 
 
 
